#1 adding some comments

--- a/research/grid_gen_methods.ipynb
+++ b/research/grid_gen_methods.ipynb
@@ -462,6 +462,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Methods of generating mine coordinates\n",
+    "\n",
+    "About half the time taken to make a board is generating the coordinates for mines. here's how a few methods stack up against each other."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
